--- a/src/android/res/values/arrays.xml
+++ b/src/android/res/values/arrays.xml
@@ -32,6 +32,13 @@
         <item>Enlarge Bottom</item>
     </string-array>
 
+    <string-array name="screen_gap_entries">
+        <item>None</item>
+        <item>Quarter</item>
+        <item>Half</item>
+        <item>Full</item>
+    </string-array>
+
     <string-array name="entry_values">
         <item>0</item>
         <item>1</item>
