--- a/src/android/res/xml/settings.xml
+++ b/src/android/res/xml/settings.xml
@@ -11,7 +11,7 @@
         app:key="fps_limiter"
         app:title="FPS Limiter"
         app:entries="@array/fps_limiter_entries"
-        app:entryValues="@array/entry_values"
+        app:entryValues="@array/setting_values"
         app:useSimpleSummaryProvider="true"
         app:iconSpaceReserved="false"
         app:allowDividerAbove="true"
@@ -28,7 +28,7 @@
         app:key="threaded_3d"
         app:title="Threaded 3D"
         app:entries="@array/threaded_3d_entries"
-        app:entryValues="@array/entry_values"
+        app:entryValues="@array/setting_values"
         app:useSimpleSummaryProvider="true"
         app:iconSpaceReserved="false"
         app:allowDividerAbove="true"
@@ -38,7 +38,7 @@
         app:key="screen_rotation"
         app:title="Screen Rotation"
         app:entries="@array/screen_rotation_entries"
-        app:entryValues="@array/entry_values"
+        app:entryValues="@array/setting_values"
         app:useSimpleSummaryProvider="true"
         app:iconSpaceReserved="false"
         app:allowDividerAbove="true"
@@ -48,7 +48,7 @@
         app:key="screen_arrangement"
         app:title="Screen Arrangement"
         app:entries="@array/screen_arrangement_entries"
-        app:entryValues="@array/entry_values"
+        app:entryValues="@array/setting_values"
         app:useSimpleSummaryProvider="true"
         app:iconSpaceReserved="false"
         app:allowDividerAbove="true"
@@ -58,7 +58,7 @@
         app:key="screen_sizing"
         app:title="Screen Sizing"
         app:entries="@array/screen_sizing_entries"
-        app:entryValues="@array/entry_values"
+        app:entryValues="@array/setting_values"
         app:useSimpleSummaryProvider="true"
         app:iconSpaceReserved="false"
         app:allowDividerAbove="true"
@@ -68,7 +68,7 @@
         app:key="screen_gap"
         app:title="Screen Gap"
         app:entries="@array/screen_gap_entries"
-        app:entryValues="@array/entry_values"
+        app:entryValues="@array/setting_values"
         app:useSimpleSummaryProvider="true"
         app:iconSpaceReserved="false"
         app:allowDividerAbove="true"
