--- a/src/android/res/menu/noo_menu.xml
+++ b/src/android/res/menu/noo_menu.xml
@@ -5,6 +5,12 @@
     <item android:id="@+id/controls_action"
         android:title="Toggle Controls" />
 
+    <item android:id="@+id/restart_action"
+        android:title="Restart" />
+
+    <item android:id="@+id/save_action"
+        android:title="Change Save Type" />
+
     <item android:id="@+id/settings_action"
         android:title="Settings" />
 
