Android: add a proper UI for input binding

--- a/src/android/res/menu/file_menu.xml
+++ b/src/android/res/menu/file_menu.xml
@@ -8,6 +8,11 @@
         app:showAsAction="always"
         android:visible="false" />
 
+    <item android:id="@+id/bindings_action"
+        android:icon="@drawable/bindings"
+        android:title="Input Bindings"
+        app:showAsAction="always" />
+
     <item android:id="@+id/settings_action"
         android:icon="@drawable/settings"
         android:title="Settings"
