--- a/src/android/res/values/arrays.xml
+++ b/src/android/res/values/arrays.xml
@@ -14,6 +14,14 @@
         <item>3 Threads</item>
     </string-array>
 
+    <string-array name="screen_position_entries">
+        <item>Center</item>
+        <item>Top</item>
+        <item>Bottom</item>
+        <item>Left</item>
+        <item>Right</item>
+    </string-array>
+
     <string-array name="screen_rotation_entries">
         <item>None</item>
         <item>Clockwise</item>
