Implement haptic feedback on key press and create relative setting in settings.xml and SettingsMenu

--- a/src/android/res/xml/settings.xml
+++ b/src/android/res/xml/settings.xml
@@ -41,6 +41,13 @@
         app:allowDividerAbove="true"
         app:allowDividerBelow="true" />
 
+    <SwitchPreferenceCompat
+        app:key="haptic_feedback"
+        app:title="Haptic Feedback"
+        app:iconSpaceReserved="false"
+        app:allowDividerAbove="true"
+        app:allowDividerBelow="true" />
+
     <ListPreference
         app:key="screen_position"
         app:title="Screen Position"
