Android: implement microphone support

--- a/src/android/res/xml/settings.xml
+++ b/src/android/res/xml/settings.xml
@@ -48,6 +48,13 @@
             app:allowDividerBelow="true" />
 
         <SwitchPreferenceCompat
+            app:key="mic_enable"
+            app:title="Use Microphone"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true" />
+
+        <SwitchPreferenceCompat
             app:key="show_fps_counter"
             app:title="Show FPS Counter"
             app:iconSpaceReserved="false"
