--- a/src/android/res/values/arrays.xml
+++ b/src/android/res/values/arrays.xml
@@ -14,6 +14,12 @@
         <item>3 Threads</item>
     </string-array>
 
+    <string-array name="screen_filter_entries">
+        <item>Nearest</item>
+        <item>Upscaled</item>
+        <item>Linear</item>
+    </string-array>
+
     <string-array name="screen_position_entries">
         <item>Center</item>
         <item>Top</item>
