Add an optional ghosting effect

--- a/src/android/res/xml/settings.xml
+++ b/src/android/res/xml/settings.xml
@@ -66,16 +66,6 @@
         app:iconSpaceReserved="false">
 
         <ListPreference
-            app:key="screen_filter"
-            app:title="Screen Filter"
-            app:entries="@array/screen_filter_entries"
-            app:entryValues="@array/setting_values"
-            app:useSimpleSummaryProvider="true"
-            app:iconSpaceReserved="false"
-            app:allowDividerAbove="true"
-            app:allowDividerBelow="true" />
-
-        <ListPreference
             app:key="screen_position"
             app:title="Screen Position"
             app:entries="@array/screen_position_entries"
@@ -125,6 +115,16 @@
             app:allowDividerAbove="true"
             app:allowDividerBelow="true" />
 
+        <ListPreference
+            app:key="screen_filter"
+            app:title="Screen Filter"
+            app:entries="@array/screen_filter_entries"
+            app:entryValues="@array/setting_values"
+            app:useSimpleSummaryProvider="true"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true" />
+
         <SwitchPreferenceCompat
             app:key="integer_scale"
             app:title="Integer Scale"
@@ -135,6 +135,13 @@
         <SwitchPreferenceCompat
             app:key="gba_crop"
             app:title="GBA Crop"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true" />
+
+        <SwitchPreferenceCompat
+            app:key="screen_ghost"
+            app:title="Simulate Ghosting"
             app:iconSpaceReserved="false"
             app:allowDividerAbove="true"
             app:allowDividerBelow="true" />
