--- a/src/android/res/xml/bindings.xml
+++ b/src/android/res/xml/bindings.xml
@@ -1,98 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.hydra.noods.BindingsPreference
-        app:key="a_button"
-        app:title="A Button"
-        app:iconSpaceReserved="false"
-        app:allowDividerBelow="true"
-        index="0" />
+    <PreferenceCategory
+        app:title="Buttons"
+        app:iconSpaceReserved="false">
 
-    <com.hydra.noods.BindingsPreference
-        app:key="b_button"
-        app:title="B Button"
-        app:iconSpaceReserved="false"
-        app:allowDividerAbove="true"
-        app:allowDividerBelow="true"
-        index="1" />
+        <com.hydra.noods.BindingsPreference
+            app:key="a_button"
+            app:title="A Button"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="0" />
 
-    <com.hydra.noods.BindingsPreference
-        app:key="x_button"
-        app:title="X Button"
-        app:iconSpaceReserved="false"
-        app:allowDividerAbove="true"
-        app:allowDividerBelow="true"
-        index="10" />
+        <com.hydra.noods.BindingsPreference
+            app:key="b_button"
+            app:title="B Button"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="1" />
 
-    <com.hydra.noods.BindingsPreference
-        app:key="y_button"
-        app:title="Y Button"
-        app:iconSpaceReserved="false"
-        app:allowDividerAbove="true"
-        app:allowDividerBelow="true"
-        index="11" />
+        <com.hydra.noods.BindingsPreference
+            app:key="x_button"
+            app:title="X Button"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="10" />
 
-    <com.hydra.noods.BindingsPreference
-        app:key="start_button"
-        app:title="Start Button"
-        app:iconSpaceReserved="false"
-        app:allowDividerAbove="true"
-        app:allowDividerBelow="true"
-        index="3" />
+        <com.hydra.noods.BindingsPreference
+            app:key="y_button"
+            app:title="Y Button"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="11" />
 
-    <com.hydra.noods.BindingsPreference
-        app:key="select_button"
-        app:title="Select Button"
-        app:iconSpaceReserved="false"
-        app:allowDividerAbove="true"
-        app:allowDividerBelow="true"
-        index="2" />
+        <com.hydra.noods.BindingsPreference
+            app:key="start_button"
+            app:title="Start Button"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="3" />
 
-    <com.hydra.noods.BindingsPreference
-        app:key="up_button"
-        app:title="Up Button"
-        app:iconSpaceReserved="false"
-        app:allowDividerAbove="true"
-        app:allowDividerBelow="true"
-        index="6" />
+        <com.hydra.noods.BindingsPreference
+            app:key="select_button"
+            app:title="Select Button"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="2" />
 
-    <com.hydra.noods.BindingsPreference
-        app:key="down_button"
-        app:title="Down Button"
-        app:iconSpaceReserved="false"
-        app:allowDividerAbove="true"
-        app:allowDividerBelow="true"
-        index="7" />
+        <com.hydra.noods.BindingsPreference
+            app:key="up_button"
+            app:title="Up Button"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="6" />
 
-    <com.hydra.noods.BindingsPreference
-        app:key="left_button"
-        app:title="Left Button"
-        app:iconSpaceReserved="false"
-        app:allowDividerAbove="true"
-        app:allowDividerBelow="true"
-        index="5" />
+        <com.hydra.noods.BindingsPreference
+            app:key="down_button"
+            app:title="Down Button"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="7" />
 
-    <com.hydra.noods.BindingsPreference
-        app:key="right_button"
-        app:title="Right Button"
-        app:iconSpaceReserved="false"
-        app:allowDividerAbove="true"
-        app:allowDividerBelow="true"
-        index="4" />
+        <com.hydra.noods.BindingsPreference
+            app:key="left_button"
+            app:title="Left Button"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="5" />
 
-    <com.hydra.noods.BindingsPreference
-        app:key="l_button"
-        app:title="L Button"
-        app:iconSpaceReserved="false"
-        app:allowDividerAbove="true"
-        app:allowDividerBelow="true"
-        index="9" />
+        <com.hydra.noods.BindingsPreference
+            app:key="right_button"
+            app:title="Right Button"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="4" />
 
-    <com.hydra.noods.BindingsPreference
-        app:key="r_button"
-        app:title="R Button"
-        app:iconSpaceReserved="false"
-        app:allowDividerAbove="true"
-        index="8" />
+        <com.hydra.noods.BindingsPreference
+            app:key="l_button"
+            app:title="L Button"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="9" />
 
+        <com.hydra.noods.BindingsPreference
+            app:key="r_button"
+            app:title="R Button"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="8" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        app:title="Hotkeys"
+        app:iconSpaceReserved="false">
+
+        <com.hydra.noods.BindingsPreference
+            app:key="fast_hold"
+            app:title="Fast Forward Hold"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="12" />
+
+        <com.hydra.noods.BindingsPreference
+            app:key="fast_toggle"
+            app:title="Fast Forward Toggle"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="13" />
+
+        <com.hydra.noods.BindingsPreference
+            app:key="screen_swap"
+            app:title="Screen Swap Toggle"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            index="14" />
+    </PreferenceCategory>
 </PreferenceScreen>
