--- a/src/android/res/menu/file_menu.xml
+++ b/src/android/res/menu/file_menu.xml
@@ -4,19 +4,19 @@
 
     <item android:id="@+id/info_action"
         android:icon="@drawable/info"
-        android:title="Information"
+        android:title="@string/information"
         android:visible="false"
         app:showAsAction="always" />
 
     <item android:id="@+id/storage_action"
         android:icon="@drawable/storage"
-        android:title="Change Storage"
+        android:title="@string/change_storage"
         android:visible="false"
         app:showAsAction="always" />
 
     <item android:id="@+id/settings_action"
         android:icon="@drawable/settings"
-        android:title="Settings"
+        android:title="@string/settings"
         app:showAsAction="always" />
 
 </menu>
